# stocks

./: .gitignore  ALL_CI_FIXES_COMPLETE.md  ALL_FIXES_COMPLETE.md  BOT_NOTIFICATION.md  CI_CD_GUIDE.md  CI_FIX_SUMMARY.md  DEVELOPMENT.md  FEATURES_SUMMARY.md  FINAL_COMPLETION.md  GITHUB_ACTIONS_FIX.md  GIT_COMMIT_GUIDE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  deploy_bot_webhook.sh  docker-compose.yml  index.html  package-lock.json  package.json  test_bot_api.py  test_bot_webhook.py  vite.config.ts
.github/workflows/: ci-cd.yml  dependencies.yml  release.yml
data/: README.md
docs/: CHART_SENDING.md  CI_PERFORMANCE.md  CI_WEBKIT_FIX.md  CLEANUP_SUMMARY.md  DOCUMENTATION.md  DRAWING_TOOLS.md  IMAGE_RECOGNITION.md  MODERN_DESIGN_UPGRADE.md  MULTI_MARKET.md  RELEASE_GUIDE.md  RUST_WARNINGS_FIX.md  TELEGRAM_BOT_SETUP.md  VERCEL_STYLE.md
docs/archive/: AI_ASSISTANT.md  AI_QUICK_START.md  ALERT_FEATURE.md  API_EXAMPLES.md  BOT_TWO_WAY_COMMUNICATION.md  BOT_TWO_WAY_SUMMARY.md  CLEANUP_PLAN.md  COMPLETE_FEATURES.md  FEATURES_SUMMARY.md  FINAL_SUMMARY.md  NEWS_FEATURE.md  PROJECT_SUMMARY.md  (+1 more)
python-engine/: .env.example  Dockerfile  bot_webhook.py  bot_webhook_enhanced.py  bot_webhook_image.py  config.py  global_news.py  image_analyzer.py  main.py  multi_market.py  requirements.txt
src/: App.css  App.tsx  index.css  main.tsx  modern-utilities.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: ai.rs  market.rs  mod.rs  strategy.rs
src-tauri/src/services/: database.rs  mod.rs  python_bridge.rs
(+35 files in other folders)
